--- a/frontend/list.html
+++ b/frontend/list.html
@@ -29,8 +29,8 @@
             </table>
         </div>
     </div>
-    <div  class="dialog">
-            <img  src="/FileCloudProject/frontend/mediafile/webTest02.png"  width="1200" height="600">
+    <div class="dialog">
+        <img class="videoPeth" src="" width="1200" height="600">
         <button class="closeDialogBtn">Close</button>
     </div>
     <div  class="dialog02">
@@ -42,3 +42,4 @@
 </body>
 <script src="listscript.js"></script>
 </html>
+
