重寫註冊登入系統

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,19 @@
     <title>FileCloud</title>
 </head>
 <body>
+    <nav>
+        <label class="logo" ><i class="fa-solid fa-cloud-arrow-up"></i></i>FileCloud</label>
+        <ul >
+            <li>
+                <a href="#" ><i class="fa-solid fa-bars"></i></a>
+                <ul class="dropdown">
+                    <li>username</li>
+                    <button>登出</button>
+                </ul>
+            </li>
+            
+        </ul>
+    </nav>
     <div id="container">
         <div class="maintitle">
             <h2>創建您的檔案吧!</h2>
