彈跳式表單完成

--- a/frontend/list.html
+++ b/frontend/list.html
@@ -17,6 +17,9 @@
             <div class="maintitle">
                 <h2>創建您的檔案吧!</h2>
             </div>
+            <div class="xmark" >
+                <i  class="fa-solid fa-xmark xmarkBTN"></i>
+            </div>
             <form class="form" >
                 <div  class="formitem">
                     <label for="name">檔案名稱: </label>
@@ -73,5 +76,6 @@
     <div  class="overlay"></div>
 </body>
 <script src="listscript.js"></script>
+<script src="indexscript.js"></script>
 </html>
 
